feat: Add support displaying participant attendance
* implement feedback from @OonihiloO
* no more maps nor is_waiting field, just use transient helper methods

closes #42